# JarvisAi

./: .gitignore  BuildAndDeployService.ps1  ExtendingTools.md  JarvisAi.sln  PROJECT_STRUCTURE.md  README.md  appsettings.json  start-alita.bat  start-alita.ps1  stop-alita.bat
Jarvis.Ai/: Jarvis.Ai.csproj  Jarvis.Ai.sln
Jarvis.Ai/src/: AlitaAgent.cs  IronManSuit.cs  JarvisAgent.cs  LLMClient.cs  StarkFleetAssembler.cs
Jarvis.Ai/src/Common/Settings/: Constants.cs  StarkProtocols.cs
Jarvis.Ai/src/Common/Utils/: TextCleanerHelper.cs  Utils.cs
Jarvis.Ai/src/Core/Events/: AudioEvents.cs  EventBus.cs  IEventHandler.cs
Jarvis.Ai/src/Core/Services/: AudioService.cs
Jarvis.Ai/src/Features/AudioProcessing/: AssemblyAIRealtimeTranscriber.cs  AssemblyAITranscriber.cs  AudioOutputModule.cs  VoiceInputModule.cs  WakeWordDetector.cs  WhisperTranscriber.cs  WindowsAudioOutputModule.cs
Jarvis.Ai/src/Features/DiagramGeneration/: DiagramGenerationTool.cs
Jarvis.Ai/src/Features/StarkArsenal/: BaseJarvisModule.cs  ModuleRegistry.cs  StarkArsenal.cs
Jarvis.Ai/src/Features/StarkArsenal/ModuleAttributes/: JarvisTacticalModuleAttribute.cs  TacticalComponentAttribute.cs
Jarvis.Ai/src/Features/StarkArsenal/Modules/: AddToMemoryJarvisModule.cs  ClipboardToMemoryJarvisModule.cs  CreateFileJarvisModule.cs  (+17 more)
Jarvis.Ai/src/Features/VisualOutput/: VisualInterfaceModule.cs
Jarvis.Ai/src/Features/WebDataExtraction/: FireCrawlApp.cs
Jarvis.Ai/src/Infrastructure/Hubs/: AlitaHub.cs
Jarvis.Ai/src/Interfaces/: IAudioOutputModule.cs  ICommand.cs  IDisplayModule.cs  IJarvis.cs  IJarvisConfigManager.cs  IJarvisLogger.cs  IJarvisModule.cs  ILanguageModel.cs  IMemoryManager.cs  IModuleRegistry.cs  IStarkArsenal.cs  ITranscriber.cs  IVoiceInputModule.cs
Jarvis.Ai/src/LLM/: ILlmClient.cs  OllamaLlmClient.cs  OpenAiLlmClient.cs  ToolMapper.cs
Jarvis.Ai/src/Models/: ModelName.cs  Models.cs
Jarvis.Ai/src/Persistence/: IConversationStore.cs
iJarvis/: Installation.md  JarvisConfigManager.cs  Logger.cs  MemoryManager.cs  Program.cs  Startup.cs  active_memory.json  appsettings.Development.json  appsettings.json  iJarvis.csproj  personalization.json  web.config
iJarvis/Hubs/: AlitaHub.cs
iJarvis/WorkingArea/: CSharpDesignPatternExample.md
iJarvis/config/: JarvisConfigManager.cs  personalization.json
iJarvis/scripts/: build-and-install.ps1  build-and-install.sh  install-service.sh
iJarvis/scripts/macos/: alita-service.template.plist  install-service.sh
iJarvis/scripts/windows/: install-service.ps1
voice-interface-app/: index.html  package-lock.json  package.json
voice-interface-app/src/: App.jsx  index.css  main.jsx  style.css
voice-interface-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
voice-interface-app/src-tauri/src/: main.rs
voice-interface-app/src/components/: ChatInterface.jsx  LogConsole.jsx  VoiceInterface.jsx
voice-interface-app/src/services/: SignalRService.js
