[package]
name = "voice-interface-app"
version = "0.1.0"
description = "A Tauri Voice Interface App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# Configurazioni di build ottimizzate
[profile.dev]
opt-level = 0  # Nessuna ottimizzazione per build veloci
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.release]
opt-level = "s"  # Ottimizzazione per dimensioni
strip = true  # Rimuove i simboli debug
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8.1", features = [ "window-set-ignore-cursor-events", "shell-open", "path-all", "window-start-dragging", "window-center", "fs-all", "window-set-decorations", "window-set-always-on-top", "window-hide", "window-show", "system-tray"] }
window-shadows = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"  # Per migliori performance con i mutex
rayon = "1.5"  # Per parallelizzazione

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

# Configurazioni specifiche per Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
